--- a/团队日志.md
+++ b/团队日志.md
@@ -1,4 +1,11 @@
-#### 2019/4/16(zp)
+#### 2019/4/26(zp)
+- 修改UR_real.cpp文件,编译通过,可用于UR+robotiq抓取测试
+- 修改KN_real.cpp文件,编译通过
+- 注意:工作空间内添加新的包,clone`https://github.com/Petori/robotiq.git`,分支选择kinectic-devel
+
+- 整理原有框架,并简化代码KN_sim.cpp(仿真)
+
+#### 2019/4/23(zp)
 - 修改launch文件，将默认型号改为j2s7s300
 - 整理原有框架,并简化代码KN_sim.cpp(仿真)
 
