--- a/团队日志.md
+++ b/团队日志.md
@@ -1,8 +1,12 @@
+#### 2019/4/28(zp)
+- 增加KN_sim_new.cpp文件,其框架修改为上次开会讨论版本
+- 文件函数定义未补充完毕
+- 待补充完整后可以用仿真测试
+
 #### 2019/4/26(zp)
 - 修改UR_real.cpp文件,编译通过,可用于UR+robotiq抓取测试
 - 修改KN_real.cpp文件,编译通过
 - 注意:工作空间内添加新的包,clone`https://github.com/Petori/robotiq.git`,分支选择kinectic-devel
-
 - 整理原有框架,并简化代码KN_sim.cpp(仿真)
 
 #### 2019/4/23(zp)
@@ -11,4 +15,3 @@
 
 #### 2019/4/16(zp)
 - 上传调试后的初版包
-
