--- a/团队日志.md
+++ b/团队日志.md
@@ -1,4 +1,8 @@
 #### 2019/6/04
+- KN_sim_new基本补充完毕,还差approachTarget函数未定义
+- 模型待通过仿真调试,编译没问题
+
+#### 2019/6/04
 将realsense连接到机器人上
 注意：需要将test_d435_camera.urdf.sim.xacro拷贝到自己的realsensor包中urdf文件夹下，具体路径：/realsense-ros-2.2.4/realsense2_camera/urdf
 
