--- a/团队日志.md
+++ b/团队日志.md
@@ -1,3 +1,7 @@
+#### 2019/6/04
+将realsense连接到机器人上
+注意：需要将test_d435_camera.urdf.sim.xacro拷贝到自己的realsensor包中urdf文件夹下，具体路径：/realsense-ros-2.2.4/realsense2_camera/urdf
+
 #### 2019/5/13
 - 修改KN_real和UR_real,增加因眼在手上而需要的物体在工具坐标系到基坐标系的转换.编译通过,等待实物测试
 - 其中,原本的相机外参base2eye改名为tool2eye,新增base2tool(由tf获取
