添加无贴图模型

--- a/团队日志.md
+++ b/团队日志.md
@@ -1,3 +1,7 @@
+#### 2019/6/16
+第一次添加模型，将models中的模型添加到gazebo中对应位置，即可拖动
+gazebo对应位置如图”models位置“所示
+
 #### 2019/6/04
 - KN_sim_new基本补充完毕,还差approachTarget函数未定义
 - 模型待通过仿真调试,编译没问题
