--- a/团队日志.md
+++ b/团队日志.md
@@ -1,16 +1,46 @@
-#### 2019/6/16
+PID调参结果
+joint1	100 0.01 1.2
+joint2	200 0.01 1
+joint3	200 0.01 1.5 波动0.005
+joint4	1000 0.01 1 波动0.005
+joint5	200 0.01 1.5	波动0.001
+joint6	200 0.01 1.5
+joint7	200 0.01 1
+finger1 1 0 0
+finger2 1 0 0
+finger3 2 0.01 0.001
+手指头张角范围应该在[0,2]之间
+
+稳定目标
+0.88  3.9  0.2  1.79  -9.56  2.0  4.25  
+8.1  0.02  0.000  
+
+1000 0.01 1
+
+
+
+#### 2019/6/25(zp)
+- 检查物块模型(外观无误)
+- 修改机械臂PID参数,消除抖动
+ - rosrun rqt_reconfigure rqt_reconfigure
+ - rosrun kinova_arm_moveit_demo forPID
+ - rosrun rqt_plot rqt_plot
+- 重设几个合理的初始目标检测位置
+- 修改kinova_common.xacro以消除warning"Deprecated syntax"
+
+#### 2019/6/16(hshb)
 第一次添加模型，将models中的模型添加到gazebo中对应位置，即可拖动
 gazebo对应位置如图”models位置“所示
 
-#### 2019/6/04
+#### 2019/6/04(zp)
 - KN_sim_new基本补充完毕,还差approachTarget函数未定义
 - 模型待通过仿真调试,编译没问题
 
-#### 2019/6/04
+#### 2019/6/04(zsy)
 将realsense连接到机器人上
 注意：需要将test_d435_camera.urdf.sim.xacro拷贝到自己的realsensor包中urdf文件夹下，具体路径：/realsense-ros-2.2.4/realsense2_camera/urdf
 
-#### 2019/5/13
+#### 2019/5/13(zp)
 - 修改KN_real和UR_real,增加因眼在手上而需要的物体在工具坐标系到基坐标系的转换.编译通过,等待实物测试
 - 其中,原本的相机外参base2eye改名为tool2eye,新增base2tool(由tf获取
 
