准备视觉训练

--- a/团队日志.md
+++ b/团队日志.md
@@ -1,4 +1,8 @@
 #### 2019/6/26(zp+shibo)
+- pid未调好
+- 给了一个合适的位置,用于拍摄物块图像
+
+#### 2019/6/26(zp+shibo)
 - PID仍在调节中(质量和惯量设置为0是不可取的)
 - 模型方面tools2待加长
 - cylinder_l模型有误,需重新检查建模过程
