准备最后阶段的调试

--- a/团队日志.md
+++ b/团队日志.md
@@ -1,3 +1,8 @@
+#### 2019/7/17(zp)
+- 运行rosparam set /move_group/trajectory_execution/allowed_start_tolerance 0.05 以解决position_tolerance的问题
+- 新的错误`Controller failed with error code INVALID_GOAL`
+- 建议调试时的运行顺序为:开Gazebo,开rviz,开image,运行kinova_sim_new,成功移至物块正上方后,再手动添加待识别物体,然后启动视觉节点,在gui中输入标签-最后查看运行状况.
+
 #### 2019/6/26(zp+shibo)
 - pid未调好
 - 给了一个合适的位置,用于拍摄物块图像
@@ -13,6 +18,7 @@
 #### 2019/6/25(zp+shibo)
 - 检查物块模型(外观无误)
 - 修改机械臂PID参数,消除抖动
+ - roslaunch kinova_gazebo robot_launch_sim.launch
  - rosrun rqt_reconfigure rqt_reconfigure
  - rosrun kinova_arm_moveit_demo forPID
  - rosrun rqt_plot rqt_plot
