初步调试仿真代码

--- a/团队日志.md
+++ b/团队日志.md
@@ -1,5 +1,10 @@
+#### 2019/7/23(zp)
+- 删除了主程序中关于遮挡的应对方案
+- 通过在kinova_moveit/robot_configs/j2s7s300_moveit_config/launch路径下的trajectory_execution.launch.xml文件中添加对参数/move_group/trajectory_execution/allowed_start_tolerance的设置以解决超出start_position_tolerance导致控制器失效的问题
+- 针对错误`Controller failed with error code INVALID_GOAL`的解决方法是......总的来说,这些都是PID不好导致的问题
+- 修改了仿真代码,暂时不能进行进一步修改;现转向实物代码修改.
+
 #### 2019/7/17(zp)
-- 运行rosparam set /move_group/trajectory_execution/allowed_start_tolerance 0.05 以解决position_tolerance的问题
 - 新的错误`Controller failed with error code INVALID_GOAL`
 - 建议调试时的运行顺序为:开Gazebo,开rviz,开image,运行kinova_sim_new,成功移至物块正上方后,再手动添加待识别物体,然后启动视觉节点,在gui中输入标签-最后查看运行状况.
 
