--- a/团队日志.md
+++ b/团队日志.md
@@ -1,3 +1,8 @@
+#### 2019/7/27(expohan)
+修改模型,物理属性正常.物体提升一厘米,防止陷入.models需要替换到.gazebo中
+仅保留sim相关的文件,删除无关xacro等文件
+
+
 #### 2019/7/24(zp)
 - 暂时注释掉实物代码中速度控制的相关部分,如果抓取精度不够,再加入
 
