仿真调试0728晚

--- a/团队日志.md
+++ b/团队日志.md
@@ -1,3 +1,11 @@
+#### 2019/7/27(zp)
+- 调整了仿真所有物体的抓取参数（高度，开，闭）
+- 调快了仿真中机械臂和手爪的运动速度
+- 进行了仿真的单物体抓取测试
+- 仿真下步调PCA
+- 仿真进一步调节PID以解决抖动问题，本次抖动的情况对抓取影响不是特别大
+- 仿真抓取全部已测试，效果非常差，应对方法：先调节好PID，然后进一步调整定制的OpenVal值
+
 #### 2019/7/27(expohan)
 修改模型,物理属性正常.物体提升一厘米,防止陷入.models需要替换到.gazebo中
 仅保留sim相关的文件,删除无关xacro等文件
